<resources>
    <string name="app_name">Red_Revolution</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="connection_error_misconfigured" />
    <string name="connection_error_internal" />
    <string name="connection_error_invalid_account" />
    <string name="connection_error_license_check_failed" />
    <string name="connection_error_network" />
    <string name="connection_error_needs_resolution" />
    <string name="connection_error_disabled" />
    <string name="connection_error_invalid" />
    <string name="connection_error_missing" />
    <string name="connection_error_outdated" />
    <string name="connection_error_sign_in_required" />
    <string name="connection_error_unknown" />
    <string name="LoginError">Wrong Username or Password.</string>
    <string name="Loginsuccess">Login Successful!</string>
    <string name="SignUperror">You have entered something wrong</string>
    <string name="SignUpSuccess">Sign Up Successful!</string>
    <string name="EmailValidationError">Invalid Email</string>
    <string name="PhoneValidationError">Invalid Phone Number</string>
    <string name="PincodeValidationError">Invalid Pincode</string>
    <string name="PasswordValidationError">Invalid Password</string>
    <string name="Heading">BLOOD BANK DETAILS</string>
    <string name="CityError">City is not avilable</string>
    <string name="Fetching">Fetching Data</string>
    <string name="Wait">Please Wait...</string>
    <string name="downloading">Downloading...</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="Message">HELP!! I am in an emergency.</string>
    <string name="InternetError">No internet connection</string>
    <string name="SendSMS">Send SMS</string>
    <string name="SendEmergency">Sendig SMS to emergency contact</string>
    <string name="LocationError">Unable to fetch your location. Please try again..</string>
    <string name="LocationRequest">For Blood Bank App to function properly, we need to access your current location.</string>
    <string name="OK">OK</string>
    <string name="SMSPermission">ENABLE SMS PERMISSION</string>
    <string name="NeedSMSPermission">Please enable SMS permission for sending SMS</string>
    <string name="PermissionDeniedTitle">SMS PERMISSION DENIED</string>
    <string name="PermissionDeniedMessage">SMS permission denied please go to Settings to change it.</string>
    <string name="FetchingDirection">Fetching Direction</string>

    <string name="MobileNumber">Enter your Mobile Number</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in/साइन इन करें</string>
    <string name="action_sign_up">Sign up/साइन अप करें</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot">Forgot Password</string>
    <string name="sign_in_loading">Signing in. Please wait...</string>
    <string name="title_activity_donor_login">Sign Up</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_remider">Reminder</string>
    <string name="title_activity_donation_reminder">Reminder</string>
    <string name="title_activity_donation_date">Donation Date</string>
    <string name="title_activity_add_certificate">Certificate</string>
    <string name="error_activity_not_found">Oops, we could not find the requested application</string>
    <string name="name">Enter name here</string>
    <string name="invalid_name">Please provide a valid name</string>
    <string name="DonorList">"Donor list"</string>
    <string name="BloodBankList">blood bank list</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="EMAIL">EMAIL ID</string>
    <string name="HintDOB">Enter Date of Birth Here</string>
    <string name="HintName">Enter Name Here</string>
    <string name="HintAdd">Address</string>
    <string name="HintCity">Enter City Here</string>
    <string name="HintDistrict">Enter District Here</string>
    <string name="HintState">Enter state here</string>
    <string name="HintPin">Enter Pin Code Here</string>
    <string name="HintBG">Enter Blood Group here</string>
    <string name="HintHeight">Height in centimeters</string>
    <string name="HintWeight">Weight in Kg</string>
    <string name="Willing">I AM WILLING TO DONATE BLOOD WHEN REQUIRED</string>
    <string name="Next">NEXT</string>
    <string name="About">About</string>
    <string name="FAQs">FAQs</string>
    <string name="Certificates">Certificates</string>
    <string name="Credits">Credits</string>
    <string name="Iwishtodonate">I wish to donate</string>
    <string name="Ineedblood">I need blood</string>
    <string name="IaminanEmergency">I am in an Emergency</string>
    <string name="Fetchinglocation">Fetching location...</string>
    <string name="ListofnearbyBloodBanks">List of nearby Blood Banks</string>
    <string name="Chooseyourdistance">Choose distance(KM) </string>
    <string name="SearchByCity">Search By City</string>
    <string name="SMStoemergencycontact">SMS to emergency contact</string>
    <string name="BloodBankName">Blood Bank Name : </string>
    <string name="Address">Address : </string>
    <string name="State">State : </string>
    <string name="Pincode">Pincode : </string>
    <string name="Contact">Contact : </string>
    <string name="AP">A+ : </string>
    <string name="AN">A- : </string>
    <string name="ABP">AB+ : </string>
    <string name="ABN">AB- : </string>
    <string name="BP">B+ : </string>
    <string name="BN">B- : </string>
    <string name="OP">O+ : </string>
    <string name="ON">O- : </string>
    <string name="City">City : </string>
    <string name="LastBloodDonation">Last Blood Donated on</string>
    <string name="LastplateleteDonated">Last platelete Donated on</string>
    <string name="Email">Email</string>
    <string name="EmergencyContact">Emergency Contact</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="EnterOTP">Enter the  OTP</string>
    <string name="VerifyOTP">Verify OTP</string>
    <string name="Password">Password</string>
    <string name="contact_donor">To protect donor privacy, donor contact details are not shared here. The donor will be contacted by the Red Revolution automated system on your behalf. The donor will get in touch with you if he is available to donate blood. Do you wish to contact the donor? </string>
    <string name="sms_sent_donor">SMS has been sent to donor</string>
    <string name="Welcome">Welcome to Red Revolution</string>
    <string name="enter_bloodgroup">Enter blood group</string>
    <string name="title_activity_home">Home</string>
    <string name="auth">Authentication failed, please check your email and password..</string>
    <string name="already_verified_ph">Phone number already verified</string>
    <string name="ph_verified_success">Phone number verified successfully</string>
    <string name="instant_no_otp">Instant verification feature requires no OTP</string>
    <string name="invalid_num">Invalid number</string>
    <string name="too_many_req">Too many requests please try later</string>
    <string name="otp_sent">OTP sent</string>
    <string name="list_bb_city_unavl">List of blood bank for city unavailable</string>
    <string name="enter_city">Please enter a city</string>
    <string name="sent_instr_to_update_pass">We have sent you instructions to update your password!</string>
    <string name="failed_update_email">Failed to send update email!</string>
    <string name="ver_link_sent">Verification link sent to mail </string>
    <string name="signup_unsuccess">Sign up unsuccessful</string>
    <string name="success_act_create">Successfully created account</string>
    <string name="verification_link">Verification link sent to your mail</string>
    <string name="pass_update">Password is updated, sign in with new password!</string>
    <string name="failed_update_pass">Failed to update password!</string>
    <string name="email_verify_succ">Email verified successfully!</string>
    <string name="email_no_verify">Email not verified</string>
    <string name="enter_email">Enter your email</string>
    <string name="short_password">Password too short, enter minimum 6 characters.</string>
    <string name="want_to_verify_email">Do you want to verify your email entered previously?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="enter_pass">enter password</string>
    <string name="pass_no_match">Passwords do not match</string>
    <string name="enter_old_pass">Enter old password</string>
    <string name="new_pass_no_match_old_pass">New password cannot match old password</string>
    <string name="no_internet">No Internet connection. Make sure that</string>
    <string name="wifi">Wi-Fi</string>
    <string name="or">or</string>
    <string name="mob_data">cellular mobile data</string>
    <string name="turn_on_then">is turned on, then try again</string>
    <string name="gen_otp">Generate otp</string>
    <string name="resend_otp">Resend otp</string>
    <string name="detail_bb">Details of Blood Bank</string>
    <string name="hospi_name">Hospital Name:</string>
    <string name="addr">Address: </string>
    <string name="city">City:</string>
    <string name="certi">This is our token of appreciation for you! Share this certifcate with your friends and encourage them to donate blood.</string>
    <string name="when_donated_blood">When did you donate blood?</string>
    <string name="enter_name">Enter your name</string>
    <string name="pledge">Its been 3 months since your last blood donation! With every donation you help 3 people. We request you to donate blood. If you have already donated, let us know. We will remind you next time.</string>
    <string name="reset_pass">reset your password</string>
    <string name="res_pass">Reset Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="list_bb_last_loca">List of nearby Blood Banks according to your last location</string>
    <string name="register">Register</string>
    <string name="conf_passwd">Confirm Password</string>
    <string name="enter_new_passwd">Enter New Password</string>
    <string name="conf_new_passwd">Confirm New Password</string>
    <string name="update_passwd">Update password</string>
    <string name="change_passwd">Change Password</string>
    <string name="verify_mail_further">Please verify email to proceed Further....</string>
    <string name="phoneverification">Phone Verification</string>
    <string name="updatepassword">Update Password</string>
    <string name="logout">Logout</string>
</resources>
