<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rahulraj.red_revolution.SignUp">

    <LinearLayout
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/HintDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/editText4"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/HintName"
                android:inputType="textPersonName"
                android:id="@+id/editText3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/HintAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/editText5"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/HintCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/editText6" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:hint="@string/HintDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/editText7" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/HintState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/editText8"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/HintPin"
                android:maxLength="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/editText9"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editText28"
                android:hint="@string/HintBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintHeight"
                android:inputType="number"
                android:maxLength="3" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editText30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/HintWeight"/>
        </android.support.design.widget.TextInputLayout>
        <EditText
            android:focusable="false"
            android:clickable="true"
            android:id="@+id/editText31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LastBloodDonation"
            />


        <EditText
            android:focusable="false"
            android:id="@+id/editText32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LastplateleteDonated"
            />


        <TextView
            android:id="@+id/textView66"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/editText32"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:text="@string/Willing"
            android:textStyle="normal|bold" />



        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@+id/textView66"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YES"
                ></RadioButton>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NO"
                ></RadioButton>

        </RadioGroup>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/editText36"
                android:hint="@string/Email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/editText35"
                android:hint="@string/EmergencyContact"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/editText34"
                android:hint="@string/EmergencyContact"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/editText33"
                />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnterOTP"
                android:id="@+id/otp"/>
            <Button
                android:text="@string/VerifyOTP"
                android:id="@+id/generate_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/editText37"
                android:hint="@string/Password"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



</ScrollView>
