<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rahulraj.red_revolution.Home"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button

            android:id="@+id/donor"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/donor"
            android:text="@string/Iwishtodonate"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/acceptor"
            android:text="@string/Ineedblood"
            android:textColor="#800"
            android:textSize="20dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/emergency"
            android:text="@string/IaminanEmergency"
            android:textColor="#333"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
