<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rahulraj.red_revolution.PhoneVerification">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp">

        <EditText
            android:id="@+id/editText33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PhoneNumber"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/generate_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout"
        android:layout_centerHorizontal="true"
        android:text="Generate otp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp">

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="@string/EnterOTP" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout2"
        android:visibility="gone"
        android:layout_marginLeft="70dp"
        android:text="@string/VerifyOTP" />

    <Button
        android:id="@+id/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout2"
        android:layout_marginLeft="50dp"
        android:layout_toEndOf="@+id/verify_otp"
        android:visibility="gone"
        android:layout_toRightOf="@+id/verify_otp"
        android:text="Resend otp" />
</RelativeLayout>